--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "tauri": "tauri"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2"
+    "@tauri-apps/cli": "^2",
+    "vite": "^7.3.1"
   },
   "dependencies": {
     "@tauri-apps/plugin-process": "^2.3.1",
