--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,8 +20,9 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 tauri = { version = "2", features = [] }
 tauri-plugin-shell = "2"
-tauri-plugin-updater = "2"
 tauri-plugin-process = "2"
+tauri-plugin-updater = "2"
+tauri-plugin-opener = "2"   # <-- Đảm bảo có dòng này
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
