--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,16 +1,11 @@
 [package]
 name = "nsl-dulieutonghop"
-version = "1.0.2"
+version = "0.0.1" # Nhớ tăng version khi release
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [lib]
-# The `_lib` suffix may seem redundant but it is necessary
-# to make the lib name unique and wouldn't conflict with the bin name.
-# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
 name = "nsl_dulieutonghop_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
@@ -22,10 +17,12 @@ tauri = { version = "2", features = [] }
 tauri-plugin-shell = "2"
 tauri-plugin-process = "2"
 tauri-plugin-updater = "2"
-tauri-plugin-opener = "2"   # <-- Đảm bảo có dòng này
+tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+# --- CÁC THƯ VIỆN MỚI ---
+base64 = "0.21"
+magic_crypt = "3.1"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
-
