--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nsl-dulieutonghop"
-version = "1.0.3" # Nhớ tăng version khi release
+version = "1.0.4"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
@@ -20,9 +20,8 @@ tauri-plugin-updater = "2"
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-# --- CÁC THƯ VIỆN MỚI ---
 base64 = "0.21"
-magic-crypt = "3.1"
+magic-crypt = "3.1" # Dùng gạch ngang (-)
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
